# ChronosAgent

./: README.md  analysis_report.md  auth_manager.py  main.py  project_version_report.md  pyproject.toml  requirements.txt  role_manager.py  roleplay_core.py  structure  test_api_latency.py  test_qwen_adapter.py
app/: exceptions.py  main.py
app/api/: endpoints.py  websockets.py
app/config/: models.py  settings.py
app/middleware/: error_handler.py
app/schemas/: chat_schema.py  role_schema.py
app/services/: chat_service.py  data_service.py  role_manager.py  stats_service.py  user_manager.py
app/static/css/: style.css
app/static/css/js/: chat.js
app/static/js/: chat.js
app/templates/: index.html
app/utils/: async_notifier.py  logger.py
cli/: roleplay_cli.py
llm_adapters/: base_adapter.py  qwen_native_adapter.py
scripts/: migrate_role_meta.py
vdb_tools/: hierarchical_memory_db.py
